# SystemControl

./: .gitmodules  CMakeLists.txt  Makefile  exports.exp  main.c
debug/: dummy.c  exception.c  jumper.c  printk.c
include/: cpuclock.h  cryptography.h  exitgame.h  gameinfo.h  graphics.h  imports.h  interruptman.h  loadercore.h  loadexec.h  loadexec_patch.h  mediasync.h  missingfunc.h  modulemanager.h  msstor_cache.h  nidresolver.h  patches.h  psnfix.h  sysmem.h
libs/: Makefile
libs/graphics/: Makefile
src/: cpuclock.c  cryptography.c  elf.c  exitgame.c  gameinfo.c  hooknids.c  interruptman.c  kubridge.c  leda.c  loadercore.c  loadexec.c  mediasync.c  missingfunc.c  modulemanager.c  msstor_cache.c  nid_660_data.c  nidresolver.c  oe_malloc.c  patches.c  plugin.c  psnfix.c  rebootex.c  savedata_patch.c  sctrl.c  sctrl_hen.c  sctrl_se.c  sysmem.c  syspatch.c  threadman.c  utility.c
